<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="film" type="com.jimfo.popular_movies.model.Film"/>
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rel_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <com.jimfo.popular_movies.model.AdjustableImageView
                    android:id="@+id/backDrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_action_name"
                    android:contentDescription="@string/back_drop"
                    android:scaleType="fitXY"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/rl_marginTop"
                android:layout_weight="1">

                <com.jimfo.popular_movies.model.AdjustableImageView
                    android:id="@+id/moviePoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"

                    android:contentDescription="@string/movie_poster"
                    android:paddingBottom="@dimen/standardPadding"
                    android:paddingEnd="@dimen/standardPadding"
                    android:paddingLeft="@dimen/standardPadding"
                    android:paddingRight="@dimen/standardPadding"
                    android:paddingStart="@dimen/standardPadding"/>

                <TextView
                    android:id="@+id/saveIcon"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tv_marginTop"
                    android:layout_toEndOf="@id/moviePoster"
                    android:layout_toRightOf="@id/moviePoster"
                    android:layout_alignParentTop="true"/>

                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/tv_marginTop"
                    android:layout_toRightOf="@id/saveIcon"
                    android:layout_toEndOf="@id/saveIcon"
                    android:paddingBottom="@dimen/tv_paddingBottom"
                    android:paddingRight="@dimen/standardPadding"
                    android:paddingEnd="@dimen/standardPadding"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{film.mTitle}"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/movieRelease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movieTitle"
                    android:layout_toEndOf="@id/moviePoster"
                    android:layout_toRightOf="@id/moviePoster"
                    android:drawableLeft="@drawable/ic_event_black_24dp"
                    android:drawableStart="@drawable/ic_event_black_24dp"
                    android:gravity="center|start"
                    android:text="@{film.mReleaseDate}"/>

                <TextView
                    android:id="@+id/movieRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movieRelease"
                    android:layout_toEndOf="@id/moviePoster"
                    android:layout_toRightOf="@id/moviePoster"
                    android:drawableLeft="@drawable/ic_star_black_24dp"
                    android:drawableStart="@drawable/ic_star_black_24dp"
                    android:gravity="center|start"
                    android:text="@{film.mVoteAverage}"/>

                <TextView
                    android:id="@+id/movieLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movieRating"
                    android:layout_toEndOf="@id/moviePoster"
                    android:layout_toRightOf="@id/moviePoster"
                    android:drawableLeft="@drawable/ic_language_black_24dp"
                    android:drawableStart="@drawable/ic_language_black_24dp"
                    android:gravity="center|start"
                    android:text="@{film.mLanguage}"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/plotSummary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/standardPadding"
                    android:paddingEnd="@dimen/standardPadding"
                    android:paddingLeft="@dimen/standardPadding"
                    android:paddingRight="@dimen/standardPadding"
                    android:paddingStart="@dimen/standardPadding"
                    android:text="@{film.mPlotSummary}"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/standardPadding"
                    android:paddingEnd="@dimen/standardPadding"
                    android:paddingLeft="@dimen/standardPadding"
                    android:paddingRight="@dimen/standardPadding"
                    android:paddingStart="@dimen/standardPadding">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/leftTrailerBtn"
                        android:layout_weight="2"
                        android:onClick="onTrailerChange"
                        android:contentDescription="@string/left"
                        android:src="@drawable/ic_chevron_left_black_24dp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/trailer_label"
                        android:text="@string/trailers"
                        android:gravity="center"
                        android:onClick="removeWidget"
                        android:textColor="@color/detail_activity_btn"
                        android:textSize="20sp"
                        android:layout_weight="6"
                        android:layout_marginEnd="@dimen/tv_paddingBottom"
                        android:layout_marginLeft="@dimen/tv_paddingBottom"
                        android:layout_marginRight="@dimen/tv_paddingBottom"
                        android:layout_marginStart="@dimen/tv_paddingBottom"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/rightTrailerBtn"
                        android:layout_weight="2"
                        android:onClick="onTrailerChange"
                        android:contentDescription="@string/right"
                        android:src="@drawable/ic_chevron_right_white_24dp"/>

                </LinearLayout>

                <com.jimfo.popular_movies.model.AdjustableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/trailer_iv"
                    android:onClick="playVideo"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:contentDescription="@string/trailers"
                    android:paddingBottom="@dimen/standardPadding"
                    android:paddingEnd="@dimen/standardPadding"
                    android:paddingLeft="@dimen/standardPadding"
                    android:paddingRight="@dimen/standardPadding"
                    android:paddingStart="@dimen/standardPadding"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/standardPadding"
                    android:paddingEnd="@dimen/standardPadding"
                    android:paddingLeft="@dimen/standardPadding"
                    android:paddingRight="@dimen/standardPadding"
                    android:paddingStart="@dimen/standardPadding">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/leftBtn"
                        android:layout_weight="2"
                        android:onClick="onReviewChange"
                        android:contentDescription="@string/left"
                        android:src="@drawable/ic_chevron_left_black_24dp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/review_label"
                        android:text="@string/reviews"
                        android:gravity="center"
                        android:onClick="removeWidget"
                        android:textColor="@color/detail_activity_btn"
                        android:textSize="20sp"
                        android:layout_weight="6"
                        android:layout_marginEnd="@dimen/tv_paddingBottom"
                        android:layout_marginLeft="@dimen/tv_paddingBottom"
                        android:layout_marginRight="@dimen/tv_paddingBottom"
                        android:layout_marginStart="@dimen/tv_paddingBottom"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/rightBtn"
                        android:layout_weight="2"
                        android:onClick="onReviewChange"
                        android:contentDescription="@string/right"
                        android:src="@drawable/ic_chevron_right_white_24dp"/>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/review_tv"
                    android:visibility="gone"
                    android:paddingBottom="@dimen/standardPadding"
                    android:paddingEnd="@dimen/standardPadding"
                    android:paddingLeft="@dimen/standardPadding"
                    android:paddingRight="@dimen/standardPadding"
                    android:paddingStart="@dimen/standardPadding"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>